--- a/module-3/02_CSS_Selectors/exercise-student/style.css
+++ b/module-3/02_CSS_Selectors/exercise-student/style.css
@@ -15,3 +15,76 @@ ul {
   margin: 0;
   padding: 0;
 }
+aside {
+  position: fixed;
+  width: 200px;
+  height: 100vh;
+  border-right: 1px solid #00adee;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+aside img{
+  display: block;
+  height: 120px;
+  margin: 0 auto;
+}
+main{
+  margin-left: 200px;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+aside li{
+  list-style: none;
+  text-align: center;
+  text-transform: uppercase;
+  border-bottom: 1px;
+  margin: 10px auto;
+  padding-bottom: 10px;
+  width: 80%;
+  line-height: 2;
+  }
+  aside li a{
+    color:#00adee;
+    font-weight: bold;
+    text-decoration: none;
+
+  }
+  aside li a:hover{
+    text-decoration: underline;
+  }
+header{
+  height: 120px;
+
+
+}
+main header img{
+  height: 80%;
+}
+.banner{
+  display: block;
+  width: 100%;
+}
+section > div{
+  display: inline-block;
+  width: 33%;
+  padding-right: 20px;
+  margin-top:  20px;
+}
+section > div h2{
+  color: green;
+}
+section > div h2 i{
+  margin-right: 10px;
+}
+#what-we-do{
+  border-right: green solid 1px;
+}
+#our-work{
+  border-right: green solid 1px;
+  padding-right: 20px;
+}
+#contact-us{
+  padding-left: 20px;
+}
+
