--- a/module-3/04_Flexbox/exercise-student/mini-exercises/flex-items-size/step-1/main.css
+++ b/module-3/04_Flexbox/exercise-student/mini-exercises/flex-items-size/step-1/main.css
@@ -16,4 +16,9 @@ body {
   color: #fff;
   text-align: center;
   border: solid 1px #777;
+  flex-grow: 1;
+}
+.container{
+  display: flex;
+  flex-direction: row;
 }
