--- a/module-3/04_Flexbox/exercise-student/mini-exercises/header/step-1/main.css
+++ b/module-3/04_Flexbox/exercise-student/mini-exercises/header/step-1/main.css
@@ -37,3 +37,9 @@ a:hover {
   color: #00AFEF;
   text-decoration: underline;
 }
+header,
+header img,
+header nav ul {
+  display: flex;
+  flex-direction: row;
+}
