--- a/module-3/04_Flexbox/exercise-student/mini-exercises/header/step-4/main.css
+++ b/module-3/04_Flexbox/exercise-student/mini-exercises/header/step-4/main.css
@@ -43,3 +43,15 @@ li a:hover {
 .my-account img {
   width: 32px;
 }
+header,
+header img,
+header nav ul {
+  display: flex;
+  flex-direction: row;
+}
+header nav ul{
+  justify-content: flex-start;
+}
+.spacer{
+  flex-basis: 100%;
+}
