--- a/module-3/04_Flexbox/exercise-student/mini-exercises/align-content-row/step-1/main.css
+++ b/module-3/04_Flexbox/exercise-student/mini-exercises/align-content-row/step-1/main.css
@@ -16,3 +16,8 @@ body {
   color: #fff;
   border: solid 1px #777;
 }
+.container{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+}
