--- a/module-3/04_Flexbox/exercise-student/mini-exercises/flex-items-size/step-2/main.css
+++ b/module-3/04_Flexbox/exercise-student/mini-exercises/flex-items-size/step-2/main.css
@@ -16,9 +16,12 @@ body {
   color: #fff;
   text-align: center;
   border: solid 1px #777;
+
 }
 
 .box:nth-child(2),
 .box:nth-child(4) {
   background-color: #005270;
+  flex-grow: 2;
 }
+
