--- a/module-3/04_Flexbox/exercise-student/mini-exercises/header/step-2/main.css
+++ b/module-3/04_Flexbox/exercise-student/mini-exercises/header/step-2/main.css
@@ -41,3 +41,12 @@ a:hover {
   color: #00AFEF;
   text-decoration: underline;
 }
+header,
+header img,
+header nav ul {
+  display: flex;
+  flex-direction: row;
+}
+header nav ul{
+  justify-content: center;
+}
