--- a/module-3/09_Event_Handling/lecture-student/playground/style.css
+++ b/module-3/09_Event_Handling/lecture-student/playground/style.css
@@ -1,3 +1,9 @@
 div {
     border: 2px solid black;
 }
+.makeTextYellow{
+    color: darkgoldenrod
+}
+.greenbackground{
+    background-color: darkseagreen;
+}
